# kgcl-rdflib

./: .gitignore  .travis.yml  404.html  Activity.html  AddNodeToSubset.html  AddToSubset.html  Agent.html  AllowsAutomaticReplacementOfEdges.html  Annotation.html  Change.html  ChangeMixin.html  ChangeSetSummaryStatistic.html  ClassCreation.html  ClassNode.html  ComplexChange.html  Configuration.html  Creation.html  DatatypeChange.html  Deletion.html  Edge.html  EdgeChange.html  EdgeCreation.html  EdgeDeletion.html  EdgeLabelChange.html  EdgeLogicalInterpretationChange.html  EdgeObsoletion.html  EdgeRewiring.html  InstanceNode.html  LogicalAxiomChange.html  LogicalDefinition.html  Makefile  MultiNodeObsoletion.html  NameBecomesSynonym.html  NewSynonym.html  NewTextDefinition.html  Node.html  NodeAnnotationChange.html  NodeAnnotationReplacement.html  NodeChange.html  NodeCreation.html  (+174 more)
Activity/: index.html
AddNodeToSubset/: index.html
AddToSubset/: index.html
Agent/: index.html
AllowsAutomaticReplacementOfEdges/: index.html
Annotation/: index.html
Change/: index.html
ChangeMixin/: index.html
ChangeSetSummaryStatistic/: index.html
ClassCreation/: index.html
ClassNode/: index.html
ComplexChange/: index.html
Configuration/: index.html
Creation/: index.html
DatatypeChange/: index.html
DatatypeOrLanguageTagChange/: index.html
Deletion/: index.html
Edge/: index.html
EdgeChange/: index.html
EdgeCreation/: index.html
EdgeDeletion/: index.html
EdgeLabelChange/: index.html
EdgeLogicalInterpretationChange/: index.html
EdgeObsoletion/: index.html
EdgeRewiring/: index.html
InstanceNode/: index.html
LanguageTagChange/: index.html
LogicalAxiomChange/: index.html
LogicalDefinition/: index.html
MappingCreation/: index.html
MultiNodeObsoletion/: index.html
NameBecomesSynonym/: index.html
NewSynonym/: index.html
NewTextDefinition/: index.html
Node/: index.html
NodeAnnotationChange/: index.html
NodeAnnotationReplacement/: index.html
NodeChange/: index.html
NodeCreation/: index.html
NodeDeepening/: index.html
NodeDeletion/: index.html
NodeDirectMerge/: index.html
NodeMove/: index.html
NodeObsoletion/: index.html
NodeObsoletionWithDirectReplacement/: index.html
NodeObsoletionWithMerge/: index.html
NodeObsoletionWithNoDirectReplacement/: index.html
NodeObsoletionWithSplit/: index.html
NodeRename/: index.html
NodeShallowing/: index.html
NodeSynonymChange/: index.html
NodeTextDefinitionChange/: index.html
NodeUnobsoletion/: index.html
Obsoletion/: index.html
OntologyElement/: index.html
OntologySubset/: index.html
OwlTypeEnum/: index.html
PlaceUnder/: index.html
PredicateChange/: index.html
PropertyValue/: index.html
RemoveFromSubset/: index.html
RemoveSynonym/: index.html
RemoveTextDefinition/: index.html
RemovedNodeFromSubset/: index.html
Session/: index.html
SetLanguageForName/: index.html
SimpleChange/: index.html
Subset/: index.html
SubsetMembershipChange/: index.html
SynonymPredicateChange/: index.html
SynonymReplacement/: index.html
TextDefinitionReplacement/: index.html
TextualDiff/: index.html
Transaction/: index.html
Unobsoletion/: index.html
about/: index.html
about2/: index.html
about_edge/: index.html
about_node/: index.html
acted_on_behalf_of/: index.html
activity_id/: index.html
activity_set/: index.html
add_to_subset_in_subset/: index.html
agent_set/: index.html
annotation_set/: index.html
associated_change_set/: index.html
change_1/: index.html
change_2/: index.html
change_change_date/: index.html
change_creator/: index.html
change_date/: index.html
change_description/: index.html
change_pull_request/: index.html
change_see_also/: index.html
change_set/: index.html
change_set_summary_statistic_change_type/: index.html
change_set_summary_statistic_count/: index.html
change_set_summary_statistic_property_value_set/: index.html
change_type/: index.html
change_was_generated_by/: index.html
class_creation_change_description/: index.html
configuration__contributor_predicate/: index.html
configuration__creator_predicate/: index.html
configuration__definition_predicate/: index.html
configuration__main_synonym_predicate/: index.html
configuration__name_predicate/: index.html
configuration__obsoletion_policy/: index.html
configuration__obsoletion_workflow/: index.html
configuration__synonym_predicates/: index.html
consider/: index.html
contributor/: index.html
count/: index.html
creation_has_undo/: index.html
creator/: index.html
credits/: index.html
csv/: basics.csv
date/: index.html
description/: index.html
diff/: generate_kgcl_operations.py  graph.nt  kgcl.py  kgcl_diff.sh  prov.py  render_operations.py  transformation.nt
docs/: Activity.md  AddNodeToSubset.md  AddToSubset.md  Agent.md  Annotation.md  Change.md  ChangeMixin.md  ChangeSetSummaryStatistic.md  ClassNode.md  ComplexChange.md  Creation.md  DatatypeChange.md  Deletion.md  Edge.md  EdgeChange.md  EdgeCreation.md  EdgeDeletion.md  EdgeLabelChange.md  EdgeLogicalInterpretationChange.md  EdgeObsoletion.md  InstanceNode.md  LogicalDefinition.md  NewSynonym.md  Node.md  (+91 more)
(+525 files in other folders)
