##########################
# Setup.py Configuration #
##########################
[metadata]
name = kgcl
version = 0.1.0
description = Knowledge Graph Change Language
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cmungall/knowledge-graph-change-language
download_url = https://github.com/cmungall/knowledge-graph-change-language/releases
project_urls =
    Bug Tracker = https://github.com/cmungall/knowledge-graph-change-language/issues
    Source Code = https://github.com/cmungall/knowledge-graph-change-language
    # Documentation = https://something.github.io/knowledge-graph-change-language

# Author information
author = Christian Kindermann
author_email = chris.kind.man@gmail.com
maintainer = Chris Mungall
maintainer_email = cjmungall@lbl.gov

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only

keywords =
    Ontologies
    Knowledge Graph

[options]
install_requires =
    linkml
    lark
    twine

include_package_data = True

# Random options
zip_safe = false

python_requires = >=3.7

[options.package_data]
schema = schema/*
jsonld = *.jsonld
# * = *.jsonld, _folder_/*.jsonld

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E501 # Line length
    W503 # Line break before binary operator (flake8 is wrong)
    S408 # don't worry about unsafe xml
    S318 # don't worry about unsafe xml
    S310 # TODO remove this later and switch to using requests
    B018 # This is 'useless' statements which are new atm.
    B020 # Found for loop that reassigns the iterable it 
         # is iterating with each iterable value. [Does not seem reasonable.]

    D104 # Missing docstring in public package
    D105 # Missing docstring in magic method
    D107 # Missing docstring in __init__

    DAR101 # Missing parameter(s) in Docstring: - filename
    DAR201 # Missing "Returns" in Docstring: - return
    DAR401 # Missing exception(s) in Raises section: -r

    BLK100 # Black would make changes.
    B007 # Loop control variable 'x' not used within the loop body.
exclude =
    python/kgcl.py
    model


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short